icon alignment fixes

--- a/src/app/infuse/InfusionFinder.scss
+++ b/src/app/infuse/InfusionFinder.scss
@@ -81,7 +81,7 @@
 
     .icon {
       align-self: center;
-      margin-right: 8px;
+      margin: 0 8px;
     }
   }
 
